refactor: update ServerManager.java